Added Header buttons and Footer buttons

--- a/Cover.html
+++ b/Cover.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Template</title>      
+        <title>Cover Letter</title>      
     </head>
     <style>
         body {
@@ -12,6 +12,16 @@
         }            
     </style>
     <body>
-        <h1>TEMPLATE</h1>
+        <button onclick="document.location = 'Home.html'">Home</button>
+        <button onclick="document.location = 'Cover.html'">Cover</button>
+        <button onclick="document.location = 'Resume.html'">Resume</button>
+        <button onclick="document.location = 'Hobby.html'">Hobby</button>
+        <button onclick="document.location = 'Contact.html'">Contact</button>
+        <h1>COVER LETTER</h1>
+        <button onclick="document.location = 'Home.html'">Home</button>
+        <button onclick="document.location = 'Cover.html'">Cover</button>
+        <button onclick="document.location = 'Resume.html'">Resume</button>
+        <button onclick="document.location = 'Hobby.html'">Hobby</button>
+        <button onclick="document.location = 'Contact.html'">Contact</button>
     </body>
 </html>
