Page navigation setup

--- a/Home.html
+++ b/Home.html
@@ -12,16 +12,21 @@
         }            
     </style>
     <body>
-        <button onclick="document.location = 'Home.html'">Home</button>
-        <button onclick="document.location = 'Cover.html'">Cover</button>
-        <button onclick="document.location = 'Resume.html'">Resume</button>
-        <button onclick="document.location = 'Hobby.html'">Hobby</button>
-        <button onclick="document.location = 'Contact.html'">Contact</button>
+        <center>
+        <button onclick="document.location = 'Home.html'">Home Page</button>
+        <button onclick="document.location = 'Cover.html'">Cover Letter</button>
+        <button onclick="document.location = 'Resume.html'">My Resume</button>
+        <button onclick="document.location = 'Hobby.html'">Hobbies</button>
+        <button onclick="document.location = 'Contact.html'">Contact Me</button>
+        </center>
+        <hr>
         <h1>HOME</h1>
-        <button onclick="document.location = 'Home.html'">Home</button>
-        <button onclick="document.location = 'Cover.html'">Cover</button>
-        <button onclick="document.location = 'Resume.html'">Resume</button>
-        <button onclick="document.location = 'Hobby.html'">Hobby</button>
-        <button onclick="document.location = 'Contact.html'">Contact</button>
+        <center>
+            <button onclick="document.location = 'Home.html'">Home Page</button>
+            <button onclick="document.location = 'Cover.html'">Cover Letter</button>
+            <button onclick="document.location = 'Resume.html'">My Resume</button>
+            <button onclick="document.location = 'Hobby.html'">Hobbies</button>
+            <button onclick="document.location = 'Contact.html'">Contact Me</button>
+        </center>
     </body>
 </html>
