Home page updates

--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
         body {
             background-color: #121212;
         }
-        h1 {
+        h1, h2, h3, h4, h5, h6, p, ul, li {
             color: #ffffff;
         }            
     </style>
@@ -20,7 +20,20 @@
         <button onclick="document.location = 'Contact.html'">Contact Me</button>
         </center>
         <hr>
-        <h1>HOME</h1>
+        <h1><center>Zaden Connell</center></h1>
+        <h2><center>Boone North Carolina, 28607</center></h2>
+        <h3><center>(828)773-9695; zaconnell@liberty.edu</center></h3>
+        <hr>
+        <h1>Career Objectives</h1>
+        <p>I seek a position with a company:</p>
+        <ul>
+            <li>Number 1</li>
+            <li>Number 2</li>
+            <li>Number 3</li>
+        </ul>
+        <hr>
+        <img src="Zaden.jpg" alt="Zaden Connell" width="300" height="300">
+        <hr>
         <center>
             <button onclick="document.location = 'Home.html'">Home Page</button>
             <button onclick="document.location = 'Cover.html'">Cover Letter</button>
