--- a/Cover.html
+++ b/Cover.html
@@ -7,7 +7,7 @@
         body {
             background-color: #121212;
         }
-        h1, h2, h3, h4, h5, h6, p, ul, li {
+        h1, h2, h3, h4, h5, h6, p, ul, li, i {
             color: #ffffff;
         }            
     </style>
@@ -20,7 +20,18 @@
             <button onclick="document.location = 'Contact.html'">Contact Me</button>
         </center>
         <hr>
-        <h1>COVER LETTER</h1>
+        <h2><center>Zaden Connell</center></h2>
+        <h><i><center>Cover Letter</center></i></h3>
+        <img src="">
+        <h3>My Intended Major</h3>
+        <ol>
+            <li>Bachelors in Computer Science</li>
+            <li>2025 Projected Graduation</li>
+        </ol>
+        <h3>Experience Summary</h3>
+        <p>Short desc.</p>
+        <h3>My Percieved Calling</h3>
+        <p>Short desc.</p>
         <center>
             <button onclick="document.location = 'Home.html'">Home Page</button>
             <button onclick="document.location = 'Cover.html'">Cover Letter</button>
