--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
         body {
             background-color: #121212;
         }
-        h1, h2, h3, h4, h5, h6, p, ul, li {
+        h1, h2, h3, h4, h5, h6, p, ul, li, i {
             color: #ffffff;
         }            
     </style>
@@ -20,7 +20,14 @@
             <button onclick="document.location = 'Contact.html'">Contact Me</button>
         </center>
         <hr>
-        <h1>CONTACTS</h1>
+        <h1><center>Zaden Andrew Connell</center></h1>
+        <h3><center><i>Contact Me</i></center></h3>
+        <h2><center><i>Boone North Carolina, 28607</i></center></h2>
+        <h3><center><i>(828)773-9695; zaconnell@liberty.edu</i></center></h3>
+        <hr>
+        <p><center><i>Draft a thank you note for reviewing the site, highlight your skills, invite the visitor to send an email and welcome the opportunity to talk and interview.</i></center></p>
+        <img src="Zaden.jpg" alt="Zaden Andrew Connell" width="500" height="500">
+        <hr>
         <center>
             <button onclick="document.location = 'Home.html'">Home Page</button>
             <button onclick="document.location = 'Cover.html'">Cover Letter</button>
