--- a/Cover.html
+++ b/Cover.html
@@ -22,7 +22,7 @@
         <hr>
         <h2><center>Zaden Connell</center></h2>
         <h><i><center>Cover Letter</center></i></h3>
-        <img src="">
+        <img src="Zaden.jpg" alt="Zaden" style="width:200px;height:200px;">
         <h3>My Intended Major</h3>
         <ol>
             <li>Bachelors in Computer Science</li>
