--- a/Resume.html
+++ b/Resume.html
@@ -7,7 +7,7 @@
         body {
             background-color: #121212;
         }
-        h1, h2, h3, h4, h5, h6, p, ul, li {
+        h1, h2, h3, h4, h5, h6, p, ul, li, i {
             color: #ffffff;
         }            
     </style>
@@ -20,7 +20,9 @@
             <button onclick="document.location = 'Contact.html'">Contact Me</button>
         </center>
         <hr>
-        <h1>MY RESUME</h1>
+        <h2><center>Zaden Connell</center></h2>
+        <h3><center><i>Resume</i></center></h3>
+        <hr>
         <center>
         <button onclick="document.location = 'Home.html'">Home Page</button>
         <button onclick="document.location = 'Cover.html'">Cover Letter</button>
