--- a/Hobby.html
+++ b/Hobby.html
@@ -20,7 +20,9 @@
             <button onclick="document.location = 'Contact.html'">Contact Me</button>
         </center>
         <hr>
-        <h1>MY HOBBIES</h1>
+        <h2><center>Zaden Connell</center></h2>
+        <h3><center>Hobbies and Interests</center></h3>
+        <hr>
         <center>
             <button onclick="document.location = 'Home.html'">Home Page</button>
             <button onclick="document.location = 'Cover.html'">Cover Letter</button>
