--- a/Cover.html
+++ b/Cover.html
@@ -20,18 +20,18 @@
             <button onclick="document.location = 'Contact.html'">Contact Me</button>
         </center>
         <hr>
-        <h2><center>Zaden Connell</center></h2>
+        <h2><center>Zaden Andrew Connell</center></h2>
         <h><i><center>Cover Letter</center></i></h3>
-        <img src="Zaden.jpg" alt="Zaden" style="width:200px;height:200px;">
+        <center><img src="img/cover_img.jpg" alt="Zaden Andrew Connell" width="200" height="250"></center>
         <h3>My Intended Major</h3>
         <ol>
-            <li>Bachelors in Computer Science</li>
+            <li>Bachelors in Computer Science: Software Engineering</li>
             <li>2025 Projected Graduation</li>
         </ol>
         <h3>Experience Summary</h3>
-        <p>Short desc.</p>
+        <p>4 years as a youth technolgoy intern, serving 1 year as the Assistant Director to live A/V Production and technology at local church. Included the creation of a program for an automated broadast setup, and the installation of new technology. Trained and lead 10+ volunteers to work with the production and technology team. During last year working at local church, I redesigned the website using latest trends and mordern appeals.</p> 
         <h3>My Percieved Calling</h3>
-        <p>Short desc.</p>
+        <p>I believe God is calling me to serve as a Software Engineer at a company that values Christian values, such as Life.Church. Serving at a local church to create programs to help others has lead to a passion to create programs and designs for different needs. There are many Christian companies needing such help to further the Gospel in unreached places.</p>
         <center>
             <button onclick="document.location = 'Home.html'">Home Page</button>
             <button onclick="document.location = 'Cover.html'">Cover Letter</button>
