--- a/Hobby.html
+++ b/Hobby.html
@@ -24,6 +24,24 @@
         <h3><center>Hobbies and Interests</center></h3>
         <hr>
         <center>
+            <h3>Playing Guitar</h3>
+            <p>I have always been interested in music and playing music, so I tought myself with some help from great friends how to play. It led to the chance to play at my church, and an audition for the Liberty Worship Collective. The image below is of me playing at my church a few years ago.</p>
+            <img src="img/guitar.jpg" alt="Guitar" width="200" height="275">
+            <hr>
+            <h3>Muscle Cars</h3>
+            <p>Cars have been interesting for me for as long as I can remember, always wanting to see teh fastest and loudest car. I now drive a muscle car, making modifications often and crusing down the highway. The image below is of my car.</p>
+            <img src="img/car.jpg" alt="Red Dodge Challenger" width="275" height="200">
+            <hr>
+            <h3>Wood Construction</h3>
+            <p>I recently got into wood working and crating different furniture. The image below is of a 20ft desk I built over the summer of 2021 for my church to use for technological needs.</p>
+            <img src="img/desk.jpg" alt="Desk" width="350" height="200">
+            <hr>
+            <h3>Traveling</h3>
+            <p>I have always been an avid traveler, and enjoy it. I have been to multiple countries, such as China, and many states in the U.S. The image below is from the summer of 2021 when I traveled to the Big Island of Hawaii.</p>
+            <img src="img/bigisland.jpg" alt="Cliff" width="200" height="275">
+        </center>
+        <hr>
+        <center>
             <button onclick="document.location = 'Home.html'">Home Page</button>
             <button onclick="document.location = 'Cover.html'">Cover Letter</button>
             <button onclick="document.location = 'Resume.html'">My Resume</button>
