--- a/Home.html
+++ b/Home.html
@@ -20,19 +20,19 @@
         <button onclick="document.location = 'Contact.html'">Contact Me</button>
         </center>
         <hr>
-        <h1><center>Zaden Connell</center></h1>
+        <h1><center>Zaden Andrew Connell</center></h1>
         <h2><center>Boone North Carolina, 28607</center></h2>
         <h3><center>(828)773-9695; zaconnell@liberty.edu</center></h3>
         <hr>
         <h1>Career Objectives</h1>
         <p>I seek a position with a company:</p>
         <ul>
-            <li>Number 1</li>
-            <li>Number 2</li>
-            <li>Number 3</li>
+            <li>that encourages me and help me use my skills to grow and devlop new skills.</li>
+            <li>that has a team of motivated indivudals who help advance one-another.</li>
+            <li>that is detial-oriented and employs new technologies to test and debug programs.</li>
         </ul>
         <hr>
-        <img src="Zaden.jpg" alt="Zaden Connell" width="300" height="300">
+        <img src="img/home_img.jpg" alt="Person playing guitar" width="450" height="300">
         <hr>
         <center>
             <button onclick="document.location = 'Home.html'">Home Page</button>
