--- a/Contact.html
+++ b/Contact.html
@@ -25,8 +25,8 @@
         <h2><center><i>Boone North Carolina, 28607</i></center></h2>
         <h3><center><i>(828)773-9695; zaconnell@liberty.edu</i></center></h3>
         <hr>
-        <p><center><i>Draft a thank you note for reviewing the site, highlight your skills, invite the visitor to send an email and welcome the opportunity to talk and interview.</i></center></p>
-        <img src="Zaden.jpg" alt="Zaden Andrew Connell" width="500" height="500">
+        <p><center><i>Thank you for visiting my site. I have been growing in creating programs and learning new technologies to further my knowledge and become work-force ready. I want to again thank you for visiting, and if you would ike to contact me, click the email icon below to send an email.</i></center></p>
+        <center><a href="mailto: zaconnell@liberty.edu"><img src="https://img.icons8.com/external-kiranshastry-gradient-kiranshastry/512/000000/external-email-advertising-kiranshastry-gradient-kiranshastry-1.png" alt="Email Me" width="150" height="150"></a></center>
         <hr>
         <center>
             <button onclick="document.location = 'Home.html'">Home Page</button>
