--- a/Resume.html
+++ b/Resume.html
@@ -20,8 +20,10 @@
             <button onclick="document.location = 'Contact.html'">Contact Me</button>
         </center>
         <hr>
-        <h2><center>Zaden Connell</center></h2>
+        <h2><center>Zaden Andrew Connell</center></h2>
         <h3><center><i>Resume</i></center></h3>
+        <hr>
+        <center><a href="pdf/ZadenConnell_Resume.pdf"><img src="https://img.icons8.com/office/480/000000/resume.png" alt="Resume" width="200" height="200"></a></center>
         <hr>
         <center>
         <button onclick="document.location = 'Home.html'">Home Page</button>
